# graphmon

./: CMakeLists.txt  color-config.ui  cpuload.cpp  cpuload.h  general-config.ui  icongridlayout.cpp  icongridlayout.h  multiload.cpp  multiload.h  netplotter.cpp  netplotter.h  netthroughput.cpp  netthroughput.h  plasma-applet-multiload.desktop  ramusage.cpp  ramusage.h  rigidgridlayout.cpp  rigidgridlayout.h  simpleplotter.cpp  simpleplotter.h  swapusage.cpp  swapusage.h
